# pywelkin

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING.org  README.md  README.org  SECURITY.md  pyproject.toml
LICENSES/: Apache-2.0.md  LLVM-exception.md
apps/android/: pyproject.toml
apps/console/: pyproject.toml
apps/console/console/: __main__.py
apps/desktop/: pyproject.toml
apps/ios/: README.org  pyproject.toml
core/: README.md  __init__.py  ast.py  base.py  containers.py  encoding.py  exceptions.py  graph.py  log.py  parser.py  pyproject.toml  system.py  transformer.py  tree.py  utils.py
core/core/: __init__.py  exceptions.py  parser.py
core/core/grammars/: attribute.lark  base.lark  system.lark
core/examples/: story.welkin
core/tests/: test_ast.py  test_attribute.py  test_tree.py
core/transformer/: ast.py
core/transformer/terms/: alias.py  arc.py  member.py  types.py
docs/: conf.py  index.rst  modules.rst  pywelkin.rst  pywelkin.transformer.rst  pywelkin.transformer.terms.rst
images/: subpackage.dependency-graph.png.license
lib/core/: README.md
lib/core/core/: attribute.py  base.py  validator.py
lib/core/core/grammars/: terminal.lark
lib/core/tests/: test_graph.py
lib/gui/: README.org  pyproject.toml
lib/gui/gui/: __init__.py  splash.py
pywelkin/android/: README.org  pyproject.toml
pywelkin/cli/: README.org  pyproject.toml
pywelkin/cli/cli/: __init__.py
pywelkin/cli/cli/commands/: config.py
pywelkin/core/: README.org  pyproject.toml
pywelkin/core/core/: __init__.py  ast.py  base.py  binder.py  encoding.py  exceptions.py  fold.py  graph.py  interpreter.py  parser.py  standard.py  transformer.py  tree.py  validator.py
pywelkin/core/core/examples/: story.welkin
pywelkin/core/core/grammars/: attribute.lark  base.lark  bullets.welkin  minimal.lark  minimal.welkin  standard.lark
pywelkin/core/core/welkin/: base.welkin  bullets.welkin  config.welkin  core.welkin
pywelkin/core/examples/: story.welkin
pywelkin/core/tests/: __init__.py  test_attribute.py  test_base.py  test_bullets.py  test_minimal.py
pywelkin/desktop/: README.org  pyproject.toml
pywelkin/desktop/desktop/: __init__.py
pywelkin/gui/: README.org  pyproject.toml
pywelkin/gui/gui/: __init__.py  editor.py  splash.py  window.py
pywelkin/ios/: README.org  pyproject.toml
pywelkin/ios/ios/: __init__.py
src/: containers.py  graph.py  logging.py  parser.py  string.py
src/pywelkin/: base.py  encoding.py
src/pywelkin/transformer/: ast.py
src/pywelkin/transformer/terms/: alias.py  member.py
src/tests/: test_tree.py
src/transformer/: ast.py
src/transformer/terms/: arc.py
src/welkin/: base.welkin  config.welkin
src/welkin/grammars/: bullets.welkin
tests/: __init__.py  test_ast.py  test_graph.py  test_tree.py
