[tool.poetry]
name = "pywelkin"
version = "0.3.0"
description = "Python implementaiton of Welkin, a personal information manager."
authors = ["Oscar Bender-Stone <oscarbenderstone@gmail.com>"]
maintainers = ["Oscar Bender-Stone <oscarbenderstone@gmail.com>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/AstralBearStudios/pywelkin"
keywords = ["graph", "organizer"]
packages = [{ include = "core", from = "." }]

[tool.poetry.dependencies]
python = ">=3.9, <3.12.3"
black = "^24.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"
pytest-mock = "*"
sphinx = { version = "^7.2.6" }
furo = "^2023.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
