[tool.poetry]
name = "ios"
version = "0.1.0"
description = "iOS Applicatin for PyWelkin"
authors = [
    "Oscar Bender-Stone <oscarbenderstone@gmail.com>",
]
maintainers = [
    "Oscar Bender-Stone <oscarbenderstone@gmail.com>",
]
license = "LGPL-3.0-or-later"
readme = "README.org"
repository = "https://github.com/astral-bear/pywelkin/pywelkin/ios"
keywords = ["graph", "organizer"]


[tool.poetry.dependencies]
python = ">=3.8,<3.12.2"
gui = {path = "../../lib/gui", develop = true}
pyobjc = "^10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
