[tool.poetry]
name = "core"
version = "0.1.0"
description = "Core syntax and semantic analysis library for PyWelkin"
authors = [
    "Oscar Bender-Stone <oscarbenderstone@gmail.com>",
]
maintainers = [
    "Oscar Bender-Stone <oscarbenderstone@gmail.com>",
]
license = "MIT"
readme = "README.org"
repository = "https://github.com/astral-bear/pywelkin"
keywords = ["graph", "organizer", "library"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
lark = "^1.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
