[tool.poetry]
name = "core"
version = "0.4.0"
description = "Core syntax and interpreter library for PyWelkin"
authors = [
    "Oscar Bender-Stone <oscarbenderstone@gmail.com>",
]
maintainers = [
    "Oscar Bender-Stone <oscarbenderstone@gmail.com>",
]
license = "Apache-2.0"
readme = "README.org"
repository = "https://github.com/astral-bear/pywelkin"
keywords = ["graph", "organizer", "library"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
lark = "^1.1.7"
path = "^16.7.1"
regex = "^2023.10.3"
interegular = "^0.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
