[tool.poetry]
name = "desktop"
version = "0.1.0"
description = "Desktop application for PyWelkin"
authors = [
    "Oscar Bender-Stone <oscarbenderstone@gmail.com>",
]
maintainers = [
    "Oscar Bender-Stone <oscarbenderstone@gmail.com>",
]
license = "LGPL-3.0-or-later"
readme = "README.org"
repository = "https://github.com/astral-bear/pywelkin/pywelkin/desktop"


[tool.poetry.dependencies]
python = ">=3.8,<3.12"
gui = {path = "../gui"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
